fix: search symbol out of place

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -28,5 +28,5 @@
     color: var(--white);
     background: url("/imagens/Lupa.svg");
     background-repeat: no-repeat;
-    background-position: 1em;
+    background-position: 0.65em;
 }
